--- a/index.html
+++ b/index.html
@@ -3,105 +3,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI 心理测试</title>
+    <title>AI 智能聊天</title>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; margin: 100px; background-color: black; color: white; }
-        button { padding: 10px 20px; font-size: 18px; cursor: pointer; margin: 10px; }
-        input, select { padding: 10px; font-size: 18px; width: 300px; margin: 10px; }
-        #test, #loading, #result { display: none; }
-        #loadingBar { width: 0%; height: 20px; background: limegreen; }
-        #loadingContainer { width: 300px; background: gray; margin: 20px auto; border-radius: 10px; }
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: black;
+            color: white;
+        }
+        #chat-box {
+            width: 80%;
+            height: 300px;
+            margin: auto;
+            border: 2px solid white;
+            padding: 10px;
+            overflow-y: auto;
+            text-align: left;
+            background: #222;
+        }
+        #user-input {
+            width: 70%;
+            padding: 10px;
+            font-size: 16px;
+        }
+        button {
+            padding: 10px;
+            font-size: 16px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
 
-    <div id="start">
-        <h1>📊 AI 心理测试</h1>
-        <p>测试你的心理健康状况，让 AI 进行专业分析 🤖</p>
-        <button onclick="startTest()">开始测试</button>
+    <h1>💬 AI 智能聊天</h1>
+    <div id="chat-box">
+        <p><strong>AI 🤖：</strong> 你好！我是智能 AI，随便聊聊吧！</p>
     </div>
-
-    <div id="test">
-        <h2>🧠 请选择你的心理状态：</h2>
-        <select id="question1">
-            <option value="1">最近有点焦虑</option>
-            <option value="2">有时候会不开心</option>
-            <option value="3">感觉压力有点大</option>
-            <option value="4">一切都很好！</option>
-        </select>
-        <h2>😴 你的睡眠状况如何？</h2>
-        <select id="question2">
-            <option value="1">失眠，睡不好</option>
-            <option value="2">偶尔会睡不着</option>
-            <option value="3">睡得不错</option>
-            <option value="4">每天精神满满！</option>
-        </select>
-        <h2>💭 你是否经常胡思乱想？</h2>
-        <select id="question3">
-            <option value="1">是的，经常想太多</option>
-            <option value="2">偶尔会胡思乱想</option>
-            <option value="3">不怎么会</option>
-            <option value="4">完全不会！</option>
-        </select>
-        <br>
-        <button onclick="submitTest()">提交答案</button>
-    </div>
-
-    <div id="loading">
-        <h2>🤖 AI 正在分析你的心理状态...</h2>
-        <div id="loadingContainer"><div id="loadingBar"></div></div>
-    </div>
-
-    <div id="result">
-        <h2>🔍 AI 分析结果：</h2>
-        <h1 id="analysisText"></h1>
-        <p>🔔 **建议：请尽快寻求医生帮助！**</p>
-        <button onclick="getDoctorAdvice()">获取医生建议 🏥</button>
-    </div>
-
-    <!-- 音效 -->
-    <audio id="beepSound" src="https://www.myinstants.com/media/sounds/beep.mp3"></audio>
+    <input type="text" id="user-input" placeholder="请输入你的消息..." />
+    <button onclick="sendMessage()">发送</button>
 
     <script>
-        function startTest() {
-            document.getElementById("start").style.display = "none";
-            document.getElementById("test").style.display = "block";
+        function sendMessage() {
+            let input = document.getElementById("user-input").value;
+            if (!input.trim()) return;
+
+            let chatBox = document.getElementById("chat-box");
+            chatBox.innerHTML += `<p><strong>你 🧑：</strong> ${input}</p>`;
+
+            setTimeout(() => {
+                let response = getAIResponse(input.toLowerCase());
+                chatBox.innerHTML += `<p><strong>AI 🤖：</strong> ${response}</p>`;
+                chatBox.scrollTop = chatBox.scrollHeight;
+            }, 1000);
+
+            document.getElementById("user-input").value = "";
         }
 
-        function submitTest() {
-            document.getElementById("test").style.display = "none";
-            document.getElementById("loading").style.display = "block";
-            document.getElementById("beepSound").play();
-
-            let progress = 0;
-            let interval = setInterval(() => {
-                progress += Math.random() * 10;
-                document.getElementById("loadingBar").style.width = progress + "%";
-                if (progress >= 100) {
-                    clearInterval(interval);
-                    setTimeout(() => showResult(), 1000);
-                }
-            }, 300);
-        }
-
-        function showResult() {
-            document.getElementById("loading").style.display = "none";
-            document.getElementById("result").style.display = "block";
-
-            let messages = [
-                "你的焦虑指数超标！😨",
-                "你可能患有**严重精神问题** 😱",
-                "你的心理状态非常危险！⚠️",
-                "你需要立即就医！🏥",
-                "你可能有**99% 的精神异常** 🤯"
+        function getAIResponse(userMessage) {
+            let normalResponses = [
+                "嗯... 这是个好问题！",
+                "哈哈，我不确定哦！",
+                "或许你可以自己 Google 一下？",
+                "我正在思考... 你再问一遍？",
+                "AI 也有点懵了 😂"
             ];
-            let randomMessage = messages[Math.floor(Math.random() * messages.length)];
-            document.getElementById("analysisText").innerText = randomMessage;
-        }
 
-        function getDoctorAdvice() {
-            // Rickroll 自动跳转
-            window.location.href = "https://www.youtube.com/watch?v=2qBlE2-WL60&autoplay=1";
+            let funnyResponses = [
+                "我是谁？我在哪？",
+                "我其实是一个隐藏的恶作剧网站！",
+                "你相信 AI 会骗你吗？",
+                "你的问题太深奥了，我快烧脑了！🔥",
+                "你的问题让我想起了一首歌 🎵 Never Gonna Give You Up!"
+            ];
+
+            // 关键词触发 RickRoll
+            let adultKeywords = ["成人网站", "涩涩", "h网", "黄网", "老司机", "小电影", "18禁"];
+            for (let word of adultKeywords) {
+                if (userMessage.includes(word)) {
+                    window.location.href = "https://youtu.be/uHgt8giw1LY?feature=shared";
+                    return "正在搜索符合条件的网站... 🤔（结果：你被骗了！😂）";
+                }
+            }
+
+            // 普通对话逻辑
+            if (userMessage.includes("你是谁")) {
+                return "我是最强 AI，但我不会告诉你我的真实身份！";
+            }
+            if (userMessage.includes("你聪明吗")) {
+                return "当然！我比你的猫聪明，但比你妈聪明吗？不确定！😂";
+            }
+            if (userMessage.includes("你能干啥")) {
+                return "我可以回答你所有的问题！除了数学、物理、哲学、人生… 这些都不会。";
+            }
+            if (userMessage.includes("你好")) {
+                return "你好！有什么想聊的吗？";
+            }
+            if (userMessage.includes("再见")) {
+                return "拜拜！下次再聊！";
+            }
+
+            return Math.random() > 0.5 ? normalResponses[Math.floor(Math.random() * normalResponses.length)] 
+                                       : funnyResponses[Math.floor(Math.random() * funnyResponses.length)];
         }
     </script>
 
