--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             let adultKeywords = ["成人网站", "涩涩", "h网", "黄网", "老司机", "小电影", "18禁"];
             for (let word of adultKeywords) {
                 if (userMessage.includes(word)) {
-                    window.location.href = "https://youtu.be/uHgt8giw1LY?feature=shared";
+                    window.location.href = "https://youtu.be/2qBlE2-WL60?si=1s-CEjvDSGUobjlK";
                     return "正在搜索符合条件的网站... 🤔（结果：你被骗了！😂）";
                 }
             }
