Update index.html video link

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 "或许你可以自己 Google 一下？",
                 "我正在思考... 你再问一遍？",
                 "AI 也有点懵了 😂"
+                "我想起了一首歌叫“Never Gonna Give You Up!”"
             ];
 
             let funnyResponses = [
